--- a/heat-applications-bench-on-bench.html
+++ b/heat-applications-bench-on-bench.html
@@ -154,7 +154,7 @@
 		<div class="row">	
 			<div class="col-md-4">
 				<div class="card card-plain">
-					<a href="heat-products-microclimate-tubing.html"><img src="img/heat-products-microclimate-tubing.jpg" alt="BioTherm SunFin&reg;" class="card-img-top" /></a>
+					<a href="heat-products-microclimate-tubing.html"><img src="img/heat-products-microclimate-tubing.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
 						<h3><a href="heat-products-microclimate-tubing.html">MicroClimate<small> &trade;</small> Tubing</h3></a>
 						<p class="card-text">The original energy-saving BioTherm bench top heating system.</p>
@@ -164,7 +164,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card card-plain">
-					<a href="heat-products-megatube.html"><img src="img/heat-products-megatube.jpg" alt="BioTherm DuoFin&trade;" class="card-img-top" /></a>
+					<a href="heat-products-megatube.html"><img src="img/heat-products-megatube.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
 						<h3><a href="heat-products-megatube.html">MegaTube</a><small> &trade;</small></h3>
 						<p>Jumbo size manifold technology to work with a wide range of heating applications.</p>
