--- a/heat-applications-crop-in-crop.html
+++ b/heat-applications-crop-in-crop.html
@@ -138,7 +138,7 @@
 		<div class="row">	
 			<div class="col-md-4">
 				<div class="card card-plain">
-					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm DuoFin&trade;" class="card-img-top" /></a>
+					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
 						<h3><a href="heat-products-duofin.html">DuoFin</a><small> &trade;</small></h3>
 						<p>Provides incredibly even heating across the width of your greenhouse growing areas.<br /><br /></p>
