--- a/heat-products-duofin.html
+++ b/heat-products-duofin.html
@@ -76,7 +76,7 @@
 							<p>DuoFin provides incredibly even heating across the width of your greenhouse growing areas.&nbsp;Its unique tapered fin design delivers a combination of convective and radiant heating quietly and efficiently. Having only two fins means that more loops are needed to meet your heat load than with its sister product, StarFin&mdash;but it also means you&rsquo;ll never have to clean debris from the fins. Also, the large inside diameter means less pumping energy is required to provide greater evenness than any competitive system.</p>
 						</div>
 						<div class="col-sm-5">
-							<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_375.jpg" width="500" height="375" alt="BioTherm DuoFin&trade;" class="img-fluid margin-bottom-20" />
+							<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Duofin_Syngenta_1_500_375.jpg" width="500" height="375" alt="BioTherm" class="img-fluid margin-bottom-20" />
 							<!-- Duplicate buttons for mobile view -->
 							<p class="visible-xs-block"><a href="http://www.biothermsolutions.com/contact" class="btn btn-block btn-danger">Order Now</a></p>
 							<p class="visible-xs-block"><a href="http://www.biothermsolutions.com/assets/uploads/spec-sheets/BT-FP-001_BioTherm_Duofin.pdf" class="btn btn-hydro btn-block">Download Spec Sheet</a></p>
@@ -88,23 +88,23 @@
 							<div class="row">
 							<div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_In_Crop_Heat_800_600.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_In_Crop_Heat_800_600.JPG" class="img-fluid" alt="BioTherm DuoFin&trade;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_In_Crop_Heat_800_600.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Parsons_Duofin_1_800_600.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Parsons_Duofin_1_800_600.JPG" class="img-fluid" alt="BioTherm DuoFin&trade;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Parsons_Duofin_1_800_600.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Under_Bench_Rolling_800_600.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Under_Bench_Rolling_800_600.JPG" class="img-fluid" alt="BioTherm DuoFin&trade;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Under_Bench_Rolling_800_600.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_800_600.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_800_600.JPG" class="img-fluid" alt="BioTherm DuoFin&trade;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_DuoFin_-_Vertical_800_600.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/FinConnFamily_w_Labels_800_532.jpg" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/FinConnFamily_w_Labels_800_532.jpg" class="img-fluid" alt="BioTherm DuoFin&trade;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/FinConnFamily_w_Labels_800_532.jpg" class="img-fluid" alt="BioTherm">
 									</a>
 								</div>
 							</div>	
