--- a/heat-products-sunfin.html
+++ b/heat-products-sunfin.html
@@ -79,7 +79,7 @@
 		<p>BioTherm&nbsp;SunFin&nbsp;is available in 12-foot standard lengths, with custom lengths available upon request.&nbsp;The pipes are assembled with standard groove-style pipe couplings, and rest on standard brackets or bracings as needed.</p>
 						</div>
 						<div class="col-sm-5">
-							<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_-_Over_Heat_Heat_500_375.JPG" width="500" height="375" alt="BioTherm SunFin&reg;" class="img-fluid margin-bottom-20" />
+							<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_-_Over_Heat_Heat_500_375.JPG" width="500" height="375" alt="BioTherm" class="img-fluid margin-bottom-20" />
 							<!-- Duplicate buttons for mobile view -->
 							<p class="visible-xs-block"><a href="http://www.biothermsolutions.com/contact" class="btn btn-block btn-danger">Order Now</a></p>
 							<p class="visible-xs-block"><a href="http://www.biothermsolutions.com/assets/uploads/spec-sheets/BT-FP-003_BioTherm_Sunfin.pdf" class="btn btn-info btn-block">Download Spec Sheet</a></p>
@@ -91,23 +91,23 @@
 							<div class="row">
 							<div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_Enclosure_-_Perimeter_Heat_800_773.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_Enclosure_-_Perimeter_Heat_800_773.JPG" class="img-fluid" alt="BioTherm SunFin&reg;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Finned_Pipe_-_SunFin_Enclosure_-_Perimeter_Heat_800_773.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://chrootassets/uploads/products-applications/sunfin.png" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://chrootassets/uploads/products-applications/sunfin.png" class="img-fluid" alt="BioTherm SunFin&reg;">
+										<img src="http://chrootassets/uploads/products-applications/sunfin.png" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/IMG_0031E_800_724.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/IMG_0031E_800_724.JPG" class="img-fluid" alt="BioTherm SunFin&reg;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/IMG_0031E_800_724.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/IMG_0128E_800_600.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/IMG_0128E_800_600.JPG" class="img-fluid" alt="BioTherm SunFin&reg;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/IMG_0128E_800_600.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div><div class="col-xs-6 col-md-3">
 									<a href="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Sunfin_Coupler_02_800_532.JPG" class="thumbnail fancybox" rel="ligthbox" >
-										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Sunfin_Coupler_02_800_532.JPG" class="img-fluid" alt="BioTherm SunFin&reg;">
+										<img src="http://www.biothermsolutions.com/images/made/chrootassets/uploads/products-applications/Sunfin_Coupler_02_800_532.JPG" class="img-fluid" alt="BioTherm">
 									</a>
 								</div>
 							</div>	
