--- a/heat-applications-bench-under-bench.html
+++ b/heat-applications-bench-under-bench.html
@@ -113,7 +113,7 @@
 		<div class="row">	
 			<div class="col-md-4">
 				<div class="card card-plain">
-					<a href="heat-products-sunfin.html"><img src="img/heat-sunfin.jpg" alt="BioTherm SunFin&reg;" class="card-img-top" /></a>
+					<a href="heat-products-sunfin.html"><img src="img/heat-sunfin.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
 						<h3><a href="heat-products-sunfin.html">SunFin</a><small> &reg;</small></h3>
 						<p class="card-text">High-output, radiant heat finned pipe made specifically for various greenhouse heating applications.</p>
@@ -123,7 +123,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="card card-plain">
-					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm DuoFin&trade;" class="card-img-top" /></a>
+					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
 						<h3><a href="heat-products-duofin.html">DuoFin</a><small> &trade;</small></h3>
 						<p>Provides incredibly even heating across the width of your greenhouse growing areas.<br /><br /></p>
