--- a/heat-applications-ground-bed.html
+++ b/heat-applications-ground-bed.html
@@ -59,7 +59,7 @@
 			<div class="col-md-9">
 				<div class="row">
 					<div class="col-md-10">
-						<p class="lead">Tubes are embedded and covered with weed mat or soil..</p>
+						<p class="lead">Tubes are embedded and covered with weed mat or soil.</p>
 					</div>
 				</div>
 			</div>
