--- a/heat-applications-bench-under-bench.html
+++ b/heat-applications-bench-under-bench.html
@@ -76,7 +76,7 @@
 									<li><a href="heat-applications-ground-bed.html">Bed</a></li> &nbsp;&middot;&nbsp;  
 									<li><a href="heat-applications-ground-on-ground.html">On-Ground</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-ground-in-floor.html">In-Floor</a></li> &nbsp;&middot;&nbsp; 
-									<li><a href="heat-applications-ground in-ground.html">In-Ground</a></li> &nbsp;&middot;&nbsp; 
+									<li><a href="heat-applications-ground-in-ground.html">In-Ground</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-ground-snow-melt.html">Snow Melt</a></li> &nbsp;&middot;&nbsp; 
 									<li><a href="heat-applications-ground-frost.html">Frost Protection</a></li>
 								</ul>
