--- a/heat.html
+++ b/heat.html
@@ -68,13 +68,13 @@
 	
 	<div class="container section">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<p>Our innovative energy saving technology is designed to meet the individual needs of even the most demanding projects -- whether through new construction, major upgrades, or retrofits. Each greenhouse heating system is tailored to specific climate and growing conditions. Our systems are durable and efficient which result in high success rates and peak crops.</p>
 				<p>BioTherm is more than heating. We deliver the highest quality products with unparalleled service, saving you time and money. From initial consultation to installation, BioTherm’s staff is with you every step of the way.  Each system includes comprehensive instructions for installation and operation and custom CAD drawings. All heating systems include two years of free on-going support.</p>
 				<p>BioTherm designs mission-critical heating systems for greenhouses. These buildings rapidly gain heat when the sun comes out and lose heat almost as fast when the sun disappears. Humidity levels can be jungle-like. The presence of water, fertilizer, and other corrosive chemicals is everywhere. We have invested over three decades into developing rugged heating solutions that are unique and designed to go the distance and survive to help plants thrive.</p>
 				<a href="quote.html"><button type="button" class="btn btn-danger"> Request a Quote</button></a>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-7">
 				<div class="card card-nav-tabs">
 					<div class="card-header card-header-danger">
 						<div class="nav-tabs-navigation">
@@ -86,6 +86,7 @@
 									<li class="nav-item"><a class="nav-link" href="#Crop" data-toggle="tab"> Crop</a></li>
 									<li class="nav-item"><a class="nav-link" href="#Bench" data-toggle="tab"> Bench</a></li>
 									<li class="nav-item"><a class="nav-link" href="#Space" data-toggle="tab"> Space</a></li>
+									<li class="nav-item"><a class="nav-link" href="#Industry" data-toggle="tab"> Industry</a></li>
 								</ul>
 							</div>
 						</div>
@@ -133,6 +134,14 @@
 								<a href="heat-applications-space-gutter.html"><button type="button" class="btn">Gutter</button></a>
 								<a href="heat-applications-space-perimeter.html"><button type="button" class="btn">Perimeter</button></a>
 								<a href="heat-applications-space-top.html"><button type="button" class="btn">Top</button></a>
+							</div>
+							<div class="tab-pane" id="Industry">
+								<h4>Industry</h4>
+								<a href="heat-industry-greenhouse.html"><button type="button" class="btn">Greenhouse</button></a>
+								<a href="heat-industry-institutional.html"><button type="button" class="btn">Institutional</button></a>
+								<a href="heat-industry-habitat.html"><button type="button" class="btn">Habitat</button></a>
+								<a href="heat-industry-turf.html"><button type="button" class="btn">Turf</button></a>
+								<a href="heat-industry-building.html"><button type="button" class="btn">Buildings</button></a>
 							</div>
 						</div>
 					</div>
