--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 ml-auto mr-auto text-center">
-					<h3 class="title"> Newletter</h3>
+					<h3 class="title"> Newsletter</h3>
 					<h4>If you're interested in our solutions, please sign up to recieve our newsletter. We won't spam you and we won't share your email address with anyone else.</h4>
 				</div>
 				<div class="col-md-10 ml-auto mr-auto">
