--- a/heat-products-duofin.html
+++ b/heat-products-duofin.html
@@ -65,33 +65,27 @@
 						<a href="files/BioTherm_Duofin.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
 					</div>
 				</div>
+					
 				<div class="row">
-					<div class"col-md-4">
-						<div class="card card-plain">
-							<div class="panel-heading">
-								<h3 class="no-top-margin">Applications</h3>
-							</div>
-							<div class="card-body">
-								<ul class="list-unstyled">
-									<li><span class="nav">BENCH</span>
-										<ul class="nav">
-											<li><a href="heat-applications-bench-under-bench.html"><span class="badge badge-success">Under-Bench</span></a></li>
-										</ul>
-									</li>
-									<li><span class="nav">SPACE</span>
-										<ul class="nav">
-											<li><a href="heat-applications-space-gutter.html">Gutter</a></li> &nbsp;&middot;&nbsp; 
-											<li><a href="heat-applications-space-top.html">Top</a></li> &nbsp;&middot;&nbsp; 
-											<li><a href="heat-applications-space-perimeter.html">Perimeter</a></li>
-										</ul>
-									</li>
-									<li><span class="label label-crop">CROP</span>
-										<ul class="nav">
-											<li><a href="heat-applications-crop-in-crop.html">In-Crop</a></li> &nbsp;&middot;&nbsp; 
-										</ul>
-									</li>
-								</ul>
-							</div>
+					<div class="col-md-12">
+						<h4>Applications</h4>
+					</div>
+				</div>
+				<div class="col-md-12">
+					<div class="row">
+						<div class"col-md-4">
+							<p>Bench</p>
+							<a href="heat-applications-bench-under-bench.html"><span class="badge badge-success">Under-Bench</span></a>
+						</div>
+						<div class"col-md-4">
+							<p>Space</p>
+							<a href="heat-applications-space-gutter.html"><span class="badge badge-success">Gutter</span></a>
+							<a href="heat-applications-space-top.html"><span class="badge badge-success">Top</span></a>
+							<a href="heat-applications-space-perimeter.html"><span class="badge badge-success">Perimeter</span></a>
+						</div>
+						<div class"col-md-4">
+							<p>Crop</p>
+							<a href="heat-applications-crop-in-crop.html"><span class="badge badge-success">In-Crop</span></a>
 						</div>
 					</div>
 				</div>
@@ -160,7 +154,57 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<table class="table table-bordered table-striped table-condensed table-responsive w-100 d-block d-md-table">
+					<thead class="thead-dark text-center">
+						<tr>
+							<th colspan="12">DuoFin Heat Pipe Output Ratings (Output Btu/hr/ft)</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td colspan="12">Output based on 65&deg; ambient temperature.</td>
+						</tr>
+						<tr>
+							<td>Water Temp (F°):</td>
+							<td>130&deg;</td>
+							<td>140&deg;</td>
+							<td>150&deg;</td>
+							<td>160&deg;</td>
+							<td>170&deg;</td>
+							<td>180&deg;</td>
+							<td>190&deg;</td>
+							<td>200&deg;</td>
+							<td>210&deg;</td>
+							<td>220&deg;</td>
+						</tr>
+						<tr>
+							<td>DuoFin:</td>
+							<td>83&deg;</td>
+							<td>94&deg;</td>
+							<td>117&deg;</td>
+							<td>133&deg;</td>
+							<td>150&deg;</td>
+							<td>167&deg;</td>
+							<td>183&deg;</td>
+							<td>200&deg;</td>
+							<td>222&deg;</td>
+							<td>244&deg;</td>
+						</tr>
+						<tr>
+							<td>DuoFin Lite</td>
+							<td>64&deg;</td>
+							<td>73&deg;</td>
+							<td>90&deg;</td>
+							<td>103&deg;</td>
+							<td>116&deg;</td>
+							<td>129&deg;</td>
+							<td>141&deg;</td>
+							<td>154&deg;</td>
+							<td>171&deg;</td>
+							<td>188&deg;</td>
+						</tr>
+					</tbody>
+				</table>
 				
 			</div>
 		</div>	
@@ -168,7 +212,7 @@
 
 		
 		<div class="row" style="margin-top:40px;">
-			<h4>In Use</h4>
+			<h4  class="vertical-text">In Use</h4>
 		</div>
 		<div class="row">
 			<div class="col">
