--- a/heat-products-duofin.html
+++ b/heat-products-duofin.html
@@ -145,8 +145,8 @@
 						</tr>
 						<tr>
 							<td> Max Operating Temp.:</td>
-							<td>30 PSI</td>
-							<td>30 PSI</td>
+							<td>230&deg;F</td>
+							<td>230&deg;F</td>
 						</tr>
 						<tr>
 							<td>Max Operating Pressure:</td>
