--- a/heat-products-sunfin.html
+++ b/heat-products-sunfin.html
@@ -63,7 +63,7 @@
 						<p>Manufactured completely from aluminum, BioTherm SunFin pipes do not rust in growing environments. They are lightweight, so they can be stacked as perimeter heating without overloading the structure and hang easily for top heat and snow melt applications. They are manufactured with 1¼-inch tubing to transport hot water quickly to the fins, then dissipate it quickly with broad aluminum fins.</p>
 						<p>BioTherm SunFin is available in 12-foot standard lengths, with custom lengths available upon request. The pipes are assembled with standard groove-style pipe couplings, and rest on standard brackets or bracings as needed.</p>
 						<a href="contact.html"><button type="button" class="btn btn-danger"> Order Now</button></a>
-						<a href="files/BioTherm_Duofin.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
+						<a href="files/BioTherm_Sunfin.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
 					</div>
 				</div>
 					
@@ -351,6 +351,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
