--- a/heat-products-starfin.html
+++ b/heat-products-starfin.html
@@ -88,7 +88,7 @@
 					<br />
 					<div class="row">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe allowfullscreen="" frameborder="0" height="225" src="https://www.youtube.com/embed/0X8mRVY9gWc" width="400"></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/0X8mRVY9gWc" allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
