--- a/heat-products-starfin.html
+++ b/heat-products-starfin.html
@@ -212,6 +212,11 @@
 		</div>
 		<div class="row">
 			<div class="col">
+				<a href="img/heat-product-starfin-5.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-starfin-5.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col">
 				<a href="img/heat-product-starfin-0.jpg" class="thumbnail" data-toggle="lightbox" >
 					<img src="img/heat-product-starfin-0.jpg" alt="BioTherm" class="img-fluid" />
 				</a>
@@ -239,36 +244,54 @@
 		</div>
 		<br />
 		<div class="row">
-			<h3>Products</h3>
+			<h4>Related Heating Products</h4>
 		</div>
 		<div class="row">	
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<div class="card card-plain">
-					<a href="heat-products-sunfin.html"><img src="img/heat-sunfin.jpg" alt="BioTherm" class="card-img-top" /></a>
+					<a href="heat-products-sunfin.html"><img src="img/heat-product-sunfin-schema.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
-						<h3><a href="heat-products-sunfin.html">SunFin</a><small> &reg;</small></h3>
-						<p class="card-text">High-output, radiant heat finned pipe made specifically for various greenhouse heating applications.</p>
-						<a href="heat-products-sunfin.html"><button type="button" class="btn btn-success"> Sunfin</button></a>
+						<h4><a href="heat-products-sunfin.html">SunFin</a><small> &reg;</small></h4>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<div class="card card-plain">
-					<a href="heat-products-duofin.html"><img src="img/heat-duofin.jpg" alt="BioTherm" class="card-img-top" /></a>
+					<a href="heat-products-duofin.html"><img src="img/heat-product-duofin-schema.jpg" alt="BioTherm" class="card-img-top" /></a>
 					<div class="card-body">
-						<h3><a href="heat-products-duofin.html">DuoFin</a><small> &trade;</small></h3>
-						<p>Provides incredibly even heating across the width of your greenhouse growing areas.<br /><br /></p>
-						<a href="heat-products-duofin.html"><button type="button" class="btn btn-success"> Duofin</button></a>
+						<h4><a href="heat-products-duofin.html">DuoFin</a><small> &trade;</small></h4>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-2">
 				<div class="card card-plain">
-					<a href="heat-products-starfin.html"><img src="img/heat-starfin.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
+					<a href="heat-products-starfin.html"><img src="img/heat-product-starfin-schema.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
 					<div class="card-body">
-						<h3><a href="heat-products-starfin.html">StarFin</a><small> &trade;</small></h3>
-						<p>Provides high heat output and minimizes pipes.<br /><br /><br /></p>
-						<a href="heat-products-starfin.html"><button type="button" class="btn btn-success"> Starfin</button></a>
+						<h4><a href="heat-products-starfin.html">StarFin</a><small> &trade;</small></h4>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="card card-plain">
+					<a href="heat-products-hdx.html"><img src="img/heat-product-hdx-schema.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
+					<div class="card-body">
+						<h4><a href="heat-products-hdx.html">HDX</a><small> &trade;</small></h4>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="card card-plain">
+					<a href="heat-products-microclimate-tubing.html"><img src="img/heat-product-microclimate-schema.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
+					<div class="card-body">
+						<h4><a href="heat-products-microclimate-tubing.html">MicroClimate Tubing</a><small> &trade;</small></h4>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2">
+				<div class="card card-plain">
+					<a href="heat-products-megatube.html"><img src="img/heat-product-megatube-schema.jpg" alt="BioTherm StarFin&trade;" class="card-img-top" /></a>
+					<div class="card-body">
+						<h4><a href="heat-products-megatube.html">MegaTube</a><small> &trade;</small></h4>
 					</div>
 				</div>
 			</div>
