--- a/heat-products-hdx.html
+++ b/heat-products-hdx.html
@@ -63,7 +63,7 @@
 						<p class="lead">HDX<small>&trade;</small> is an ultra-high molecular weight resin of high density polyethylene. </p>
 						<p>BioTherm HDX (high density extrusion) is our durable polyethylene tubing solution commonly used for in slab and floor heating. Manufactured from a ultra-high molecular weight resin, HDX tubing is extremely tough and meets stringent ASTM testing standards for quality. It's made from a distinct red color, so you know you are getting true HDX tubing. Also offered is our GreenPEX with E-Beam cross-linking for increased durability, commonly used in institutional environments, available with or without oxygen barrier.</p>
 						<a href="contact.html"><button type="button" class="btn btn-danger"> Order Now</button></a>
-						<a href="files/BioTherm_Starfin.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
+						<a href="files/BioTherm_HDX.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
 					</div>
 				</div>
 					
