--- a/heat-products-megatube.html
+++ b/heat-products-megatube.html
@@ -196,6 +196,43 @@
 				</a>
 			</div>
 		</div>
+		
+		<div class="row" style="margin-top:40px;">
+			<h4  class="vertical-text">Accessories</h4>
+		</div>
+		<div class="row">
+			<div class="col col1">
+				<a href="img/heat-product-megatube-accessory-grabbertrack.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-megatube-accessory-grabbertrack.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col2">
+				<a href="img/heat-product-megatube-accessory-tfitting.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-megatube-accessory-tfitting.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col3">
+				<a href="img/heat-product-megatube-accessory-spliceunion.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-megatube-accessory-spliceunion.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col5">
+				<a href="img/heat-product-megatube-accessory-ifitting.jpg.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-megatube-accessory-ifitting.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col5">
+				<a href="img/heat-product-megatube-accessory-clamp.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-megatube-accessory-clamp.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+			<div class="col col5">
+				<a href="img/heat-product-megatube-accessory-goofplug.jpg" class="thumbnail" data-toggle="lightbox" >
+					<img src="img/heat-product-megatube-accessory-goofplug.jpg" alt="BioTherm" class="img-fluid" />
+				</a>
+			</div>
+		</div>
+		
 		<br />
 		<div class="row">
 			<h4>Related Heating Products</h4>
@@ -306,6 +343,7 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
+<script src="js/ekko-lightbox.js"></script>
 <script src="js/bootstrap-material-design.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7ggSZufhKYdFE5PfBcy6aS4xnaX4-O_0"></script>
 <script src="js/material-kit.min.js"></script>
