--- a/heat-products-megatube.html
+++ b/heat-products-megatube.html
@@ -63,7 +63,7 @@
 						<p class="lead">MegaTube<small>&trade;</small> is the Original BioTherm<small>&reg;</small> Microclimate’s “Big Brother.”</p>
 						<p>Using the same extrusion and manifolding technology, we created a jumbo size to provide a product that will work for a wide range of heating applications. Because of its high tolerance to temperature and chemicals and its excellent heat transfer characteristics, MegaTube will provide years of optimum temperatures as part of a Greenhouse Heating System.</p>
 						<a href="contact.html"><button type="button" class="btn btn-danger"> Order Now</button></a>
-						<a href="files/BioTherm_HDX.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
+						<a href="files/BioTherm_MegaTube.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
 					</div>
 				</div>
 					
@@ -148,7 +148,7 @@
 						</tr>
 						<tr>
 							<td>Heat Rating:</td>
-							<td>.4 btu/hr/ft&deg;&Delta;F</td>
+							<td>.4 btu/hr/ft&deg;&Delta;Tf</td>
 						</tr>
 						<tr>
 							<td>Uv Resistant:</td>
