--- a/hydro-toob.html
+++ b/hydro-toob.html
@@ -40,8 +40,14 @@
 	</div>
 </nav>
 
-<div class="page-header header-smallest header-filter" data-parallax="true">
+<div class="page-header header-smaller" data-parallax="true" style="background-image: url('img/hydro-product-toob-0.jpg');">
 	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h2>the <b>TOOB</b><small>&trade;</small></h2>
+				<h3>Oxygen Infusion Machine</h3>
+			</div>
+		</div>
 
 	</div>
 </div>
@@ -70,7 +76,8 @@
 					Find out why oxygen infusion as part of your irrigation plan can make a big difference to your grow operation.
 					Increasing the amount of Dissolved Oxygen in your irrigation water allows more vigorous, crazy root growth. Roots climb out of their grow bags, resulting in increased plant growth.
 				</p>
-				
+				<a href="contact.html"><button type="button" class="btn btn-danger"> Order Now</button></a>
+				<a href="files/BioTherm_MicroClimate.pdf"><button type="button" class="btn btn-hydro"> Download Spec Sheet</button></a>
 			</div>
 			<div class="col-md-7">
 				<div class="card card-nav-tabs">
