--- a/hydro-toob.html
+++ b/hydro-toob.html
@@ -187,15 +187,6 @@
 		<div class="col-md-7">
 			<h5 class="title">Testimonials</h5>
 			<div id="toob-testimonial-carousel" class="carousel slide" data-ride="carousel">
-			<!--<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-			</ol>-->
 				<div class="carousel-inner" role="listbox">
 					<div class="carousel-item active">
 						<div class="card bg-info">
@@ -269,8 +260,8 @@
 							</div>
 						</div>
 					</div>
-					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
-					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+					<a class="carousel-control-prev" href="#toob-testimonial-carousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
+					<a class="carousel-control-next" href="#toob-testimonial-carousel" role="button" data-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="sr-only">Next</span></a>
 				</div>
 			</div>
 		</div>
