--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
 								<div class="icon icon-info">
 									<img class="img" src="img/biotherm-heat.png" style="width:100px;"/>
 								</div>
-								<h4 class="card-title">Heat</h4>
-								<p class="product-card-text">Our innovative energy saving technology is designed to meet the individual needs of even the most demanding projects -- whether through new construction, major upgrades, or retrofits. BioTherm®</p>
+								<h4 class="card-title">Environmental</h4>
+								<ul class="product-card-list">
+										<li>Heating</li>
+										<li>Cooling</li>
+										<li>Dehumidification</li>
+										<li>CO<sup>2</sup> Dosing</li>
+								</ul>
 								<a href="heat.html"><button type="button" class="btn btn-danger"><b>Heat</b></button></a>
 								</div>
 							</div>
@@ -82,8 +87,11 @@
 								<div class="icon icon-success">
 									<img class="img" src="img/biotherm-hydro.png" style="width:100px;"/>
 								</div>
-								<h4 class="card-title">Hydro</h4>
-								<p class="product-card-text">Our hydro... Morbi fringilla rutrum nisi. Vestibulum luctus accumsan urna vehicula tristique. Nam quis quam blandit, congue ante nec, vehicula leo. </p>
+								<h4 class="card-title">Waterworks</h4>
+								<ul class="product-card-list">
+										<li>D.O. Infusion</li>
+										<li>Flood Floors</li>
+								</ul>
 								<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Hydro</b></button></a>
 							</div>
 						</div>
@@ -94,8 +102,11 @@
 								<div class="icon icon-danger">
 									<img class="img" src="img/biotherm-tech.png" style="width:100px;"/>
 								</div>
-								<h4 class="card-title">Tech</h4>
-								<p class="product-card-text">Our grow technologies... Praesent mi lorem, vestibulum nec eros sed, viverra auctor dui. Aenean ultricies at augue eget congue. Ut in porttitor odio, condimentum luctus nibh. Etiam eget elementum turpis. Phasellus aliquam felis vitae scelerisque placerat. </p>
+								<h4 class="card-title">Automation</h4>
+								<ul class="product-card-list">
+										<li>Data Visualization</li>
+										<li>Control Solutions</li>
+								</ul>
 								<a href="tech.html"><button type="button" class="btn btn-success"><b>Tech</b></button></a>
 							</div>
 						</div>
