--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<li>Dehumidification</li>
 										<li>CO<sup>2</sup> Dosing</li>
 								</ul>
-								<a href="heat.html"><button type="button" class="btn btn-danger"><b>Heat</b></button></a>
+								<a href="heat.html"><button type="button" class="btn btn-danger"><b>Environmental</b></button></a>
 								</div>
 							</div>
 						</div>
@@ -92,7 +92,7 @@
 										<li>D.O. Infusion</li>
 										<li>Flood Floors</li>
 								</ul>
-								<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Hydro</b></button></a>
+								<a href="hydro.html"><button type="button" class="btn btn-hydro"><b>Waterworks</b></button></a>
 							</div>
 						</div>
 					</div>
@@ -107,7 +107,7 @@
 										<li>Data Visualization</li>
 										<li>Control Solutions</li>
 								</ul>
-								<a href="tech.html"><button type="button" class="btn btn-success"><b>Tech</b></button></a>
+								<a href="tech.html"><button type="button" class="btn btn-success"><b>Automation</b></button></a>
 							</div>
 						</div>
 					</div>
