sub not sup for CO2

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<li>Heating</li>
 										<li>Cooling</li>
 										<li>Dehumidification</li>
-										<li>CO<sup>2</sup> Dosing</li>
+										<li>CO<sub>2</sub> Dosing</li>
 								</ul>
 								<a href="heat.html"><button type="button" class="btn btn-danger"><b>Environmental</b></button></a>
 								</div>
